# fast-api-playground

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 5df16b3244ce_added_order_table.py  68579e301454_added_retailer_table.py
project/: main.py
project/config/: config.py  exceptions.py
project/dal/: models.py
project/dal/order/: __init__.py  order.py
project/dal/retailer/: __init__.py  retailer.py
project/dtos/: auth.py  cashback.py  order.py
project/libs/: cashback_client.py
project/libs/cashback_client/: __init__.py  cashback_client.py
project/libs/criptography/: password_handler.py
project/logger/: logger.py
project/mappers/: order_mappers.py  retailer_mappers.py
project/models/: __init__.py  _base.py  retailer.py
project/mysql_connection/: mysql_connection.py
project/retailers/: retailer_routes.py  retailer_service.py
project/retailers/dal/: retailer.py  retailer_facade.py
project/retailers/dto/: __init__.py  retailer.py
project/services/: __init__.py
project/services/auth/: auth_service.py
project/services/cashback/: cashback_service.py
project/services/order_service/: __init__.py  cashback_rules.py  order_service.py
project/services/retailer_service/: retailer_service.py
project/transport/: __init__.py  auth_routes.py  cashback_routes.py  order_routes.py  retailer_routes.py
test/: conftest.py  pytest.ini
test/helpers/factories/: order_factory.py  retailer_factory.py
test/helpers/fixtures/: config_fixtures.py
(+15 files in other folders)
